# src/routes/Role.Routes.ts
@@ -1,0 +1,8 @@
+import express from "express";
+import roleController from "../controllers/Role.Controller";
+
+const router = express.Router();
+
+router.post('/create',roleController.create);
+
+export default router;
